--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vital-health</title>
+    <link rel="icon" href="/favicon.png" sizes="32x32"/>
+    <meta name="msapplication-TileImage" content="/cropped-VITAL-Logo-16-270x270.png">
+    <title>Vital Health</title>
   </head>
   <body>
     <div id="app"></div>
